# VinaLC

./: .gitignore  CMakeLists.txt  License  Makefile.am  README  README.md  autogen.sh  build  configure.in  makeit
apps/: CMakeLists.txt  Makefile.am  dock.cpp  dock.h  dockBMPI.cpp  dockBMPI.h  docking.cpp  docking.h  main.cpp  mainProcedure.cpp  mainProcedure.h  mpiBparser.cpp  mpiBparser.h  mpiparser.cpp  mpiparser.h  vina.cpp  vinaBMPI.cpp  vinalc.cpp
doc/: Doxyfile.in  Makefile.am
doc/local/: Makefile  Makefile.am  Makefile.in  acknowledgements.doc  bugs.doc  changeLog.doc  citation.doc  futureWork.doc  header.html  install.doc  install.html  mainpage.doc  sources.mk  tutorial.doc  tutorial.html  userGuide.doc  userGuide.html
doc/pics/: Makefile  Makefile.am  Makefile.in  sources.mk
examples/: 1KIJ_flex1.pdbqt  1KIJ_protH1.pdbqt  1KIJ_rigid.pdbqt  debug.sh  geoList.txt  ligList.txt  recList.txt
examples/data/: ligands1.pdbqt  ligands2.pdbqt
include/: io_utils.hpp
nbproject/: Package-Default.bash  Package-Sierra.bash  configurations.xml  project.xml
scripts/: processVinaLC.py  sortVinaLC.py
src/: CMakeLists.txt  Makefile.am  bfgs.h  dock.h  dockBMPI.h  mainProcedure.cpp  model.h  mpiBparser.cpp  parallel.h  parallel_mc.cpp  parallel_mc.h  quaternion.h  tokenize.h  vinaBMPI.cpp  vinalc.cpp
src/apps/: main.cpp  mpiparser.cpp  mpiparser.h
src/lib/: common.h  everything.cpp  model.cpp  parse_error.h  parse_pdbqt.cpp  parse_pdbqt.h  szv_grid.cpp
src/main/: main.cpp
src/split/: split.cpp
